# tts-api-python

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Documentation.md  README.md  install.sh  pyproject.toml  setup.py
docker/: dev.Dockerfile
proto/: techmo_tts.proto
tests/: conftest.py  test_tts_service_api.py
tts_service_api/: techmo_tts_api.py
