[build-system]
requires = ["grpcio-tools>=1.43.0", "setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tts_service_api_python"
description = "Techmo TTS Service API"
dynamic = ["version"]
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "Techmo sp. z o.o", email = "kontakt@techmo.pl" }]
requires-python = ">=3.10"
dependencies = ["grpcio>=1.43.0", "protobuf<4,>=3.18.1"]

[project.urls]
repository = "https://github.com/techmo-pl/tts-api-python"

[tool.setuptools.dynamic]
version = { attr = "tts_service_api.VERSION.__version__" }

[tool.setuptools.packages.find]
include = ["tts_service_api*"]
