[build-system]
requires = ["grpcio-tools>=1.49.4,<1.63", "setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tts_service_api_python"
description = "Techmo TTS Service API"
dynamic = ["version"]
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "Techmo sp. z o.o", email = "kontakt@techmo.pl" }]
requires-python = ">=3.10"
dependencies = ["grpcio>=1.49.4,<1.63", "protobuf>=4.21.3,<5"]

[project.urls]
repository = "https://github.com/techmo-pl/tts-api-python"

[tool.setuptools.dynamic]
version = { attr = "tts_service_api.VERSION.__version__" }

[tool.setuptools.packages.find]
include = ["tts_service_api*"]
